# yt2md

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
src/yt2md/: __init__.py  cli.py  fetch.py  frames.py  render.py  transcribe.py
