[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt2md"
version = "0.1.0"
description = "Turn YouTube videos and Shorts into timestamped markdown transcripts with on-demand frame extraction. Caption-first, local Whisper fallback."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Rishi Raghu" }]
keywords = ["youtube", "transcript", "whisper", "markdown", "captions", "yt-dlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp>=2025.1.1",
    "faster-whisper>=1.0.0",
    "imageio-ffmpeg>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/rishi222k/yt2md"

[project.scripts]
yt2md = "yt2md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yt2md"]
